fixed the vets cards in the clinics show page instead of the cards in the OWNERS DASH

--- a/app/assets/stylesheets/pages/clinics/_home.scss
+++ b/app/assets/stylesheets/pages/clinics/_home.scss
@@ -1,58 +1,58 @@
-.clinic-show h1 {
-  font-weight: 700;
-  color: #006A71;
-  text-align: center;
-  margin-top: 30px;
-  border-top: 1px solid lightgray;
-  padding-top: 5px;
-}
+// .clinic-show h1 {
+//   font-weight: 700;
+//   color: #006A71;
+//   text-align: center;
+//   margin-top: 30px;
+//   border-top: 1px solid lightgray;
+//   padding-top: 5px;
+// }
 
-.clinic-show h3 {
-  font-weight: 200;
-  color: #006A71;
-  text-align: center;
-  border-bottom: 1px solid lightgray;
-  padding-bottom: 5px;
-
-
-}
-
-.clinic-show-vet-cards {
-  //background-color: red;
-  height: 100vh;
-  padding-top: 0;
-  display: flex;
-  justify-content: space-around;
-}
+// .clinic-show h3 {
+//   font-weight: 200;
+//   color: #006A71;
+//   text-align: center;
+//   border-bottom: 1px solid lightgray;
+//   padding-bottom: 5px;
 
 
-.clinic-show-one-vet {
-  border-radius: 20px;
-  margin: 20px;
-  //display: table;
+// }
 
-}
+// .clinic-show-vet-cards {
+//   //background-color: red;
+//   height: 100vh;
+//   padding-top: 0;
+//   display: flex;
+//   justify-content: space-around;
+// }
 
 
-.vet-profile-picture {
-  object-fit: cover;
-  width: 200px;
-  height: 200px;
-}
+// .clinic-show-one-vet {
+//   border-radius: 20px;
+//   margin: 20px;
+//   //display: table;
 
-.vet-bio-box{
-  height: 200px;
-  overflow: auto;
-}
+// }
 
-.button-to-edit-vet {
-  background-color: #FF7E67;
-  color: white;
-  padding: 5px 30px;
-  margin-top: 10px;
-  margin-bottom: 10px;
- // display: table-cell;
-}
+
+// .vet-profile-picture {
+//   object-fit: cover;
+//   width: 200px;
+//   height: 200px;
+// }
+
+// .vet-bio-box{
+//   height: 200px;
+//   overflow: auto;
+// }
+
+// .button-to-edit-vet {
+//   background-color: #FF7E67;
+//   color: white;
+//   padding: 5px 30px;
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+//  // display: table-cell;
+// }
 
 ///////////////////////////////
 
