styled the vet new form page

--- a/app/assets/stylesheets/pages/clinics/_dash.scss
+++ b/app/assets/stylesheets/pages/clinics/_dash.scss
@@ -1,6 +1,6 @@
-// .container .clinic-dashboard {
-  // margin-top: 20px;
-// }
+.container .clinic-dashboard {
+  margin-top: 20px;
+}
 
 .one-booking {
   background-color: $my-background-color;
@@ -10,36 +10,36 @@
 
 
 
-// .one-booking .one-booking-grey-bar {
-//   background-color: lightgray;
-//   width: 1%;
-// }
+.one-booking .one-booking-grey-bar {
+  // background-color: lightgray;
+  width: 1%;
+}
 
-// .one-booking .one-booking-a {
-//   padding-top: 5px;
-//   padding-left: 10px;
-//   padding-right: 10px;
-// }
+.one-booking .one-booking-a {
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
-// .one-booking-b {
-//   border-left: 1px solid lightgray;
-//   padding-left: 20px;
-//   padding-top: 5px;
-// }
+.one-booking-b {
+  border-left: 1px solid lightgray;
+  padding-left: 20px;
+  padding-top: 5px;
+}
 
-// .one-booking-c {
-//   border-left: 1px solid lightgray;
-//   padding: 0 20px;
-//   padding-top: 5px;
-// }
+.one-booking-c {
+  border-left: 1px solid lightgray;
+  padding: 0 20px;
+  padding-top: 5px;
+}
 
-// .one-booking-d .one-booking-btn {
-//   border: 1px solid $submit-button-green;
-//   margin-top: 5px;
-//   margin-right: 5px;
-//   background-color: white;
-//   color: $submit-button-green;
-// }
+.one-booking-d .one-booking-btn {
+  border: 1px solid $submit-button-green;
+  margin-top: 5px;
+  margin-right: 5px;
+  background-color: white;
+  color: $submit-button-green;
+}
 
 .one-booking-btn:hover {
    background-color: $submit-button-green;
