made further styling to vet new form

--- a/app/assets/stylesheets/pages/vets/_new.scss
+++ b/app/assets/stylesheets/pages/vets/_new.scss
@@ -1,7 +1,7 @@
 .vet-new-background {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding: 200px;
   display: flex;
   background-image: image-url("paws.png");
   height: 100vh;
