delete and add pet backend was fixed

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -29,7 +29,7 @@
               <p><b>Owner name:</b> <%= @pet.user.name %></p>
             </div>
             <div class="underline">
-              <p><b>Fluffy behavior at clinic:</b></p>
+              <p><b><%=@pet.name%> behavior at clinic:</b> <%= @pet.notes %></p>
             </div>
 
          </div>
