--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -22,10 +22,11 @@
             <%= f.input :species %>
             <%= f.input :breed %>
             <%= f.input :gender, collection: Pet.genders.keys %>
-            <%= f.input :notes %>
+            <%= f.label :notes, 'Describe behavior during vet visits' %>
+            <%= f.input :notes, as: :text, label: false ,:placeholder => 'nervous, calm, growling, snapping, or biting' %>
         </div>
         <div class="newpet-buttons d-flex justify-content-around">
-          <%= f.submit "Add Pet", disable_with: 'Submiting...',:class => 'submit_class' %>
+          <%= f.submit "Add Pet", :class => 'submit_class' %>
           <%= link_to "Back",owner_path(current_user), class: "btn_back"  %>
         </div>
 
