Added update owner details to routes, controller, view and styled it

--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -37,7 +37,7 @@
       </div>
 
       <div class="row d-flex justify-content-center align-items-center newpet mb-2">
-         <%= link_to "✏️ Edit your profile", "#" %>
+       <%= link_to "✏️ Edit your profile", edit_owner_path(@owner) %>
       </div>
 
   </div>
