fixed the cards

--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -3,7 +3,6 @@
   //border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
-  overflow-y: hidden;
   justify-content: space-around;
 }
 
@@ -28,8 +27,8 @@
 }
 
 .one-clinic-logo img {
-  height: 150px;
-  width: 150px;
+  height: 100px;
+  width: 100px;
   border: 15px solid #ECF4F3;
   border-radius: 50%;
   margin: 0;
@@ -44,8 +43,8 @@
   direction: ltr;
   color: white;
   margin: 0;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
 
 }
 
@@ -58,6 +57,13 @@
   color: white;
   width: 200px;
   height: 200px;
+}
+
+.clinic-card-description p{
+  font-weight: 400;
+  padding-bottom: 0;
+  border: 1px solid white;
+  width: 100%;
 }
 
 
