Added health record form

--- a/app/views/health_records/new.html.erb
+++ b/app/views/health_records/new.html.erb
@@ -1,6 +1,11 @@
-<%= simple_form_for([@owner, @pet, @health_record], data:{contoller:"example"}) do |f| %>
+<div class="health_record-background d-flex justify-content-center">
+  <div class="health_record-form-container">
+    <h4>Add a health record</h4>
+      <%= simple_form_for([@owner, @pet, @health_record], data:{contoller:"example"}) do |f| %>
 
-<%= f.input :type, collection: %w[Diagnosis Vaccination], input_html: {data: {reflex: "change->ExampleReflex#change_record"}} %>
+        <!-- <div class="form-inputs-booking d-flex align-items-center"> -->
+          <div class="form-inputs-health_record ">
+            <%= f.input :type, collection: %w[Diagnosis Vaccination], input_html: {data: {reflex: "change->ExampleReflex#change_record"}} %>
 
 <% if @type == "Diagnosis" %>
 
@@ -9,18 +14,32 @@
 <%= f.input :diagnosis_date %>
 <%= f.input :diagnosis%>
 <%= f.input :treatment%>
-<%= f.submit "Submit", disable_with: 'Submiting...' %>
-<% else %>
-<%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
-<%=f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
-<%= f.input :vaccination_date %>
-<%= f.input :vaccination_type%>
-<%= f.submit "Submit", disable_with: 'Submiting...' %>
+
+
+<div class="health_record-buttons d-flex justify-content-between">
+    <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record'  %>
+    <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
+ </div>
+</div>
+  </div>
+
+ <div>
+  <% else %>
+  <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
+  <%=f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
+  <%= f.input :vaccination_date %>
+  <%= f.input :vaccination_type%>
+<div class="health_record-buttons d-flex justify-content-between">
+  <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record' %>
+  <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
+</div>
+</div>
+
 <% end %>
 
 
-
-
-
-
 <% end %>
+
+    </div>
+  </div>
+
