--- a/app/views/vets/new.html.erb
+++ b/app/views/vets/new.html.erb
@@ -2,14 +2,13 @@
   <div class="vet-new-form-container">
     <h4>Add a vet to your clinic</h4>
 
-      <div class = "vet-new-form d-flex ml-4 mr-3">
         <div class="form-inputs-vet d-flex">
 
         <%= simple_form_for [@clinic,@vet] do |f| %>
           <%= f.input :first_name %>
           <%= f.input :last_name %>
           <%= f.input :speciality %>
-          <%= f.input :bio %>
+          <%= f.input :bio, as: :text, input_html: { class: "form-bar-width", maxlength: 500} %>
 
           <div class="vet-new-buttons d-flex justify-content-around">
             <%= f.submit "Submit", disable_with: 'Submiting...', class: "submit_class" %>
@@ -17,6 +16,5 @@
           </div>
         <% end %>
       </div>
-    </div>
   </div>
 </div>
