--- a/app/assets/stylesheets/pages/bookings/_new.scss
+++ b/app/assets/stylesheets/pages/bookings/_new.scss
@@ -1,25 +1,25 @@
 .booking-background {
   background-size: cover;
-  background-position: center;
+  background-position: center center;
+  background-repeat: no-repeat;
   padding: 150px 0;
   display: flex;
   background-image: image-url("paws.png");
   height: 100vh;
-}
-
-
-.form-inputs-booking {
-  margin-top: 0;
+  align-items: center;
+  overflow-y: auto;
 }
 
   .booking-form-container {
     padding-left: 20px;
     padding-right: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+    padding-bottom: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   background-color: $submit-button-green;
-  height-max: 300px;
-  border-radius:3px;
+  max-height: 700px;
+  border-radius: 3px;
+  overflow: auto;
    h4 {
      color:$submit-button-orange;
     font-family: 'Montserrat', sans-serif;
