pundit is complete Yippee

--- a/app/views/clinics/_info_window.html.erb
+++ b/app/views/clinics/_info_window.html.erb
@@ -1,2 +1,4 @@
-<h3><%= clinic.name %></h3>
-<p><%= clinic.address %></p>
+<%@clinics.each do |clinic| %>
+    <h3><%= clinic.name %></h3>
+    <p><%= clinic.location %></p>
+<%end%>
