fixed the owners dash appointment views

--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -79,6 +79,18 @@ a:link, a:visited, a:hover, a:active {
   border: 1px solid lightgray;
 }
 
+.one-booking-a-col{
+  width: 15%;
+}
+
+.one-booking-b-col{
+  width: 65%;
+}
+
+.one-booking-c-col{
+  width: 20%;
+}
+
 .one-booking-col-btn {
   margin-top: 5px;
   margin-right: 5px;
