--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -87,6 +87,10 @@
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
                   </div>
                 </div> </div>
+            <% else %>
+              <div style="background-color: rgba(254,126,104,0.2); padding-top: 5px">
+                <p style="color: grey; padding-left: 10px;">Your booking with <%= booking.vet.user.name%> is pending confirmation.</p>
+              </div>
             <% end %>
 
 
