--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -34,9 +34,6 @@ h4 {
 
 .info-written {
   overflow: hidden;
-  // background: white;
-  //  background-color: #fff5ea;
-  // box-shadow: 0 0 15px rgba(0,0,0,0.1);
   align-items: center;
  p {
   color:$submit-button-green;
@@ -58,6 +55,13 @@ h4 {
    border-radius: 50%;
   border: 2px solid white;
   background-size: cover;
+}
+
+
+.header-a {
+  color:$submit-button-green;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 }
 
 .generalinfo {
@@ -90,7 +94,7 @@ h4 {
 .btn-record {
   color:white;
   background-color: $submit-button-orange;
-  padding: 10px 15px;
+  padding: 5px 15px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
   text-align:center;
@@ -117,6 +121,12 @@ border-style: none;
 
 }
 
+.one-vaccinations-header {
+  color:$submit-button-green;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+}
+
 .one-vaccination-d {
 background-color: $my-background-color;
 height: 100px;
@@ -124,37 +134,38 @@ overflow: auto;
 }
 
 .one-diagnosis-c {
-  height: 100px;
+  height: 70px;
   overflow: auto;
 }
 
-.one-diagnosis-a {
-  height: 100px;
-  overflow: auto;
-
-}
+// .one-diagnosis-date {
+//   height: 70px;
+//   overflow: auto;
+// }
 
 .one-diagnosis-b {
-  height: 100px;
+  height: 70px;
   overflow: auto;
 }
 
 .one-vaccination-a {
-  height: 100px;
+  height: 50px;
   overflow: auto;
-  // border-radius: 5px 0 0 5px;
-  border-radius: 15px 50px 30px 5px;
-
+  p {
+    margin: 0;
+    padding:0;
+  }
 }
 
+
 .one-vaccination-b {
-  height: 100px;
+  height: 50px;
   overflow: auto;
 }
 
 
 .one-vaccination-c {
-  height: 100px;
+  height: 50px;
   overflow: auto;
 }
 
