--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -48,38 +48,51 @@
         <%= link_to "📝 Input more details", new_owner_pet_health_record_path(@owner,@pet), class: "input-diagnosis"%>
       </div>
 
-      <div class="d-flex one-diagnosis" style="margin-top: 10px;">
+       <div class= "container container-diagnosis d-flex align-items-start mb-1">
 
-
-      <div class="one-diagnosis-grey-bar" style="background-color: lightgray; width: 1%">
-      </div>
-<% @pet.health_records.each do |record| %>
-
-<% if record.type == "Diagnosis" %>
-   <div class="one-diagnosis-a d-flex align-items-center col-2" style="margin-right: 10px; padding: 5px 0 10px 10px">
-        <p>Date of visit<br> <%=record.diagnosis_date  %></p>
+      <div class="header-a col-3 d-flex align-items-start">
+        <p><strong>Date of visit</strong><br></p>
       </div>
 
-      <div class="flex-fill one-diagnosis-b d-flex align-items-start col-4" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-        <p>Diagnosis: <%= record.diagnosis %></p>
+      <div class= "col-3 header-a d-flex align-items-start " >
+        <p><strong>Diagnosis</strong><br></p>
       </div>
 
-      <div class="flex-fill one-diagnosis-c d-flex align-items-start col-4" style=" border-left: 1px solid lightgray; padding: 0 20px; padding-top: 5px;">
-        <p>Treatment: <%= record.treatment  %></p>
+      <div class="col-3 header-a d-flex align-items-start">
+        <p><strong>Treatment</strong><br></p>
       </div>
 
-       <div class="d-flex align-items-center last-box col-2" style=" padding: 0 20px; padding-top: 5px">
-        <%= link_to "View full records", '#', class: "btn-record"%>
+       <div class="d-flex align-items-center last-box col-3" >
       </div>
-<% end %>
+
+      </div>
 
 
+    <% @pet.health_records.each do |record| %>
+    <% if record.type == "Diagnosis" %>
+    <div class= "container container-diagnosis d-flex align-items-start mb-2">
 
-<% end %>
+      <div class="one-diagnosis-date col-3 d-flex align-items-start">
+        <p><%= record.diagnosis_date %></p>
+      </div>
 
-   </div>
+      <div class= "col-3 one-diagnosis-b d-flex align-items-start " >
+        <p><%= record.diagnosis %></p>
+      </div>
 
-</div>
+      <div class="col-3 one-diagnosis-c d-flex align-items-start ">
+        <p><%= record.treatment  %></p>
+      </div>
+
+       <div class="d-flex align-items-start last-box col-3 justify-content-end" >
+        <%= link_to "🔍 Full report", '#', class: "btn-record"%>
+      </div>
+
+      </div>
+    <% end %>
+  <% end %>
+  </div>
+
 
 <div class="vaccinations">
   <div class="vaccinations-header row d-flex align-items-center">
@@ -87,37 +100,54 @@
         <%= link_to "📝 Input more details", new_owner_pet_health_record_path(@owner,@pet), class: "input-diagnosis"%>
   </div>
 
+
+
+  <div class= "container container-vaccinations d-flex align-items-start mb-2">
+    <div class="one-vaccinations-header col-3 d-flex align-items-start">
+      <p><strong>Vaccination date</strong></p>
+    </div>
+
+      <div class="col-4 one-vaccinations-header d-flex align-items-start ">
+        <p><strong>Type of Vaccine</strong></p>
+      </div>
+
+      <div class="col-4 one-vaccinations-header d-flex align-items-start ">
+        <p><strong>Next vaccination date</strong></p>
+      </div>
+
+       <div class="d-flex align-items-center last-box col-1">
+   <!-- <%= link_to "View full records", '#', class: "btn-record"%> -->
+      </div>
+
+  </div>
+
 <% @pet.health_records.each do |record| %>
 
 <% if record.type == "Vaccination" %>
 
-  <div class="d-flex one-vaccination" style="margin-top: 40px;">
-
-      <div class="one-vaccination-grey-bar" style="background-color: lightgray; width: 1%">
+    <div class= "container container-vaccinations d-flex align-items-start mb-2">
+      <div class="one-vaccination-a col-3 d-flex align-items-start">
+        <p><%= record.vaccination_date  %></p>
       </div>
 
-      <div class="one-vaccination-a d-flex align-items-center col-2" style="margin-right: 10px; padding: 5px 0 10px 10px">
-        <p>Vaccination date<br> <%= record.vaccination_date  %></p>
-
+      <div class="col-4 one-vaccination-b d-flex align-items-start ">
+        <p><%= record.vaccination_type  %></p>
       </div>
 
-      <div class="flex-fill one-vaccination-b d-flex align-items-start col-4" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-        <p>Vaccine: <%= record.vaccination_type  %></p>
+      <div class="col-4 one-vaccination-c d-flex align-items-start " >
+        <p><%#=  %></p>
       </div>
 
-      <div class="flex-fill one-vaccination-c d-flex align-items-start col-4" style="  border-left: 1px solid lightgray; padding: 0 20px; padding-top: 5px">
-        <p>Next vaccination date: <%#=  %></p>
+       <div class="d-flex align-items-center last-box col-1">
+   <!-- <%= link_to "View full records", '#', class: "btn-record"%> -->
       </div>
 
-      <div class="d-fill align-items-center last-box col-2" style=" padding: 0 20px; padding-top: 5px">
-   <%= link_to "View full records", '#', class: "btn-record"%>
       </div>
 
 <% end %>
+<% end %>
 
-     <%end%>
 
-</div>
 
 </div>
 
