added photo uploads to all relevant forms and views. added a way to delete uploaded photos, also added upload of health records

--- a/app/views/owners/edit.html.erb
+++ b/app/views/owners/edit.html.erb
@@ -8,6 +8,8 @@
           <%= f.input :phone_number, :hint => 'No special characters.' %>
           <%= f.input :email  %>
           <%= f.input :location%>
+          <%= f.input :photo, as: :file, label: "Upload a profile picture" %>
+        <%= link_to "Delete photo", delete_photo_owner_path(@owner), method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
 
         <div class="edit-buttons d-flex justify-content-around">
