--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -22,7 +22,14 @@
       <% @clinic.vets.each do |vet| %>
         <div class= "clinic-show-vet">
           <div style="text-align: center;">
+          
+          <% if vet.photo.attached? %>          
+           <%= cl_image_tag( vet.photo.key,
+      width: 400, height: 300, crop: :fill) %>
+      <% else %>
             <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="photo" class="avatar vet-profile-picture">
+          <% end %>
+          
           </div>
           <div style="padding: 10px">
             <h4 class="clinic-show-vet-name"><strong>Name:</strong> <%= vet.first_name %> <%= vet.last_name %></h4>
@@ -32,7 +39,7 @@
             </div>
             <div style="text-align: left">
               <% if current_user.type == "Clinic" %>
-                <%= link_to "Edit", new_clinic_booking_path(@clinic, {vet: vet}), class: "btn button-to-edit-vet" %>
+                <%= link_to "Edit", edit_clinic_vet_path(@clinic, vet), class: "btn button-to-edit-vet" %>
               <% else %>
                 <%= link_to "Book", new_clinic_booking_path(@clinic, {vet: vet}), class: "btn button-to-edit-vet" %>
               <% end %>
