--- a/app/views/health_records/new.html.erb
+++ b/app/views/health_records/new.html.erb
@@ -14,6 +14,7 @@
 <%= f.input :diagnosis_date %>
 <%= f.input :diagnosis%>
 <%= f.input :treatment%>
+<%= f.input :document, as: :file, label: "Please up load documents"  %>
 
 
 <div class="health_record-buttons d-flex justify-content-between">
