--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,1 +1,24 @@
-<p>form for editing pet details and updating health results after seeing vets</p>
+<<div class="newpet-background d-flex justify-content-center">
+  <div class="newpet-form form pt-3">
+    <h4>Add pet to your family</h4>
+        <div class="form-inputs-newpet">
+        <%= simple_form_for [@owner, @pet] do |f| %>
+          <%= f.input :name %>
+            <%= f.input :dob %>
+            <%= f.input :species %>
+            <%= f.input :breed %>
+            <%= f.input :gender, collection: Pet.genders.keys %>
+            <%= f.label :notes, 'Describe behavior during vet visits' %>
+            <%= f.input :notes, as: :text, label: false ,:placeholder => 'nervous, calm, growling, snapping, or biting' %>
+            <%= f.input :photo, as: :file, label: "Upload a photo" %>
+            <%= link_to "Delete photo", delete_photo_owner_pet_path(@owner, @pet), method: :delete, data: { confirm: 'Are you sure?' } %>
+        </div>
+        <div class="newpet-buttons d-flex justify-content-around">
+          <%= f.submit "Add Pet", :class => 'submit_class' %>
+          <%= link_to "Back",owner_path(current_user), class: "btn_back"  %>
+        </div>
+
+  <% end %>
+
+  </div>
+</div>
