--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -24,6 +24,7 @@
             <%= f.input :gender, collection: Pet.genders.keys %>
             <%= f.label :notes, 'Describe behavior during vet visits' %>
             <%= f.input :notes, as: :text, label: false ,:placeholder => 'nervous, calm, growling, snapping, or biting' %>
+            <%= f.input :photo, as: :file, label: "Upload a photo" %>
         </div>
         <div class="newpet-buttons d-flex justify-content-around">
           <%= f.submit "Add Pet", :class => 'submit_class' %>
