fixed additional styling

--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -57,6 +57,7 @@
                 </div>
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
                   <p>Time: <%= booking.time %></p>
+                  <p>Pet name: <%= booking.pet.name%></p>
                   <p>Clinic name: <%= booking.vet.user.name%></p>
                   <p>Clinic address: <%= booking.vet.user.location %></p>
                   <p>Veterinary booked: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
