--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -13,9 +13,9 @@
       width: 400, height: 300, crop: :fill) %>
       <% else %>
         <%= image_tag "profile5.jpg", :class => 'avatar-profile' %>
-        
+
         <% end %>
-        
+
       </div>
 
 
@@ -44,7 +44,7 @@
       </div>
 
       <div class="row d-flex justify-content-center align-items-center newpet mb-2">
-       <%= link_to "✏️ Edit your profile", edit_owner_path(@owner) %>
+       <%= link_to "✏️ Edit your profile", edit_owner_path(@owner),data: { turbolinks: false } %>
       </div>
 
   </div>
@@ -56,15 +56,15 @@
         <div class="one-pet-card">
 
          <div class="col d-flex justify-content-start align-items-center">
-         
+
          <% if pet.photo.attached? %>
            <%= cl_image_tag( pet.photo.key,
       width: 400, height: 300, crop: :fill) %>
       <% else %>
        <%= image_tag(('chihuahua.jpg'), :class =>"avatar-square") %>
          <% end %>
-         
-           
+
+
          </div>
 
           <div class="col card-pet-infos">
@@ -85,7 +85,7 @@
             </div>
 
              <div class="newpet" style="text-align: center; margin-top: 10px;">
-             <%= link_to "✏️ Edit basic pet info ", edit_owner_pet_path(@owner,  pet) %>
+             <%= link_to "✏️ Edit basic pet info ", edit_owner_pet_path(@owner,  pet), data: { turbolinks: false } %>
             </div>
 
              <div class="newpet" style="text-align: center; margin-top: 10px;">
