--- a/app/assets/stylesheets/pages/clinics/_show.scss
+++ b/app/assets/stylesheets/pages/clinics/_show.scss
@@ -72,14 +72,30 @@
   background-color: #036A71;
 }
 
+// cl_image_tag ( vet.photo.key, :transformation => [
+//   {:radius: 50%}
+//   ])
+
 
 .vet-profile-picture {
   object-fit: cover;
   width: 200px;
   height: 200px;
   //border: 2px solid red;
-
 }
+
+.cloudinary-vet-profile-picture {
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 5px;
+  border: 3px solid white;
+  //border: 2px solid red;
+}
+
+
 
 .clinic-show-vet-name {
   border-bottom: 1px solid lightgray;
