--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -10,7 +10,7 @@
 <%# 2.times do %>
 <% @clinic.vets.each do |vet| %>
   <% vet.bookings.each do |booking| %>
-  <% if booking.accepted %>
+  <% if booking.accepted  %>
   <div class="d-flex one-booking">
 
     <div class="one-booking-grey-bar" style="background-color: lightgray; width: 1%">
@@ -38,9 +38,9 @@
       Manage
       </button>
       <ul class="dropdown-menu one-booking-manage-action" aria-labelledby="dropdownMenuButton">
-      <%#= link_to new_owner_pet_health_record_path(booking.pet.user, booking.pet) do %>
+      <%= link_to new_owner_pet_health_record_path(booking.pet.user, booking.pet) do %>
         <li class="dropdown-item" >Submit health report</li>
-        <%# end %>
+        <% end %>
         <!-- <a class="dropdown-item" href="#">Pet health profile</a> -->
        <%#= link_to '#' do %><li class="dropdown-item" > Pet health profile</li>
        <%# end %>
@@ -48,6 +48,9 @@
        <li class="dropdown-item" >Cancel booking</li>
        <%# end %>
 
+<%= link_to archive_booking_clinic_booking_path(@clinic, booking) do %>
+        <li class="dropdown-item" >Booking completed</li>
+        <% end %>
       </ul>
     </div>
 
