--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -48,7 +48,7 @@
           <% @owner.pets.each do |pet| %>
             <% pet.bookings.each do |booking| %>
 
-            <% if booking.accepted %>
+            <% if booking.accepted && !booking.archived %>
               <div class="d-flex one-booking-col">
                 <div class="one-booking-col-grey-bar" style="background-color: lightgray; width: 1%">
                 </div>
@@ -88,7 +88,7 @@
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
                   </div>
                 </div> </div>
-            <% else %>
+            <% elsif !booking.accepted %>
               <div style="background-color: rgba(254,126,104,0.2); padding-top: 5px">
                 <p style="color: grey; padding-left: 10px;">Your booking with <%= booking.vet.user.name%> is pending confirmation.</p>
               </div>
