--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -139,7 +139,7 @@
       </div>
 
        <div class="d-flex align-items-center last-box col-1">
-   <!-- <%= link_to "View full records", '#', class: "btn-record"%> -->
+   <%= link_to "View full records", owner_pet_health_record_path(@owner, @pet, record), class: "btn-record"%>
       </div>
 
       </div>
