--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -146,9 +146,11 @@
 
 <% end %>
 <% end %>
+</div>
 
-
-
+   <div class="d-flex profile-back justify-content-center align-items-end">
+      <%= link_to "🔙Back to profile", owner_path(current_user), class: "btn_back"%>
+    </div>
 </div>
 
 
