--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -181,3 +181,10 @@ overflow: auto;
   padding: 15px 15px;
   border-bottom: 5px dotted $submit-button-orange;
 }
+
+a.btn_back {
+  text-decoration: none;
+  color: $submit-button-green;
+  padding: 15px 15px;
+}
+
