fixed the bookings controller so it should wo rk, ugly edited the dash boards and changed the time format.

--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -10,7 +10,7 @@
 <%# 2.times do %>
 <% @clinic.vets.each do |vet| %>
   <% vet.bookings.each do |booking| %>
-  <% if booking.accepted  %>
+  <% if booking.accepted && !booking.archived %>
   <div class="d-flex one-booking">
 
     <div class="one-booking-grey-bar" style="background-color: lightgray; width: 1%">
@@ -18,7 +18,7 @@
 
     <div class="one-booking-a" style="margin-right: 10px; padding: 5px 0 10px 10px">
       <p> Date: <%= booking.date %></p>
-      <p> Time: <%= booking.time %></p>
+      <p> Time: <%= booking.time.to_s(:time)%></p>
     </div>
 
     <div class="flex-fill one-booking-b" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
@@ -42,8 +42,8 @@
         <li class="dropdown-item" >Submit health report</li>
         <% end %>
         <!-- <a class="dropdown-item" href="#">Pet health profile</a> -->
-       <%#= link_to '#' do %><li class="dropdown-item" > Pet health profile</li>
-       <%# end %>
+       <%= link_to owner_pet_path(booking.pet.user, booking.pet) do %><li class="dropdown-item" > Pet health profile</li>
+       <% end %>
        <%#= link_to '#' do %>
        <li class="dropdown-item" >Cancel booking</li>
        <%# end %>
