--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -48,19 +48,22 @@
           <% @owner.pets.each do |pet| %>
             <% pet.bookings.each do |booking| %>
 
-            <% if booking.accepted && !booking.archived %>
+            <% if !booking.archived %>
               <div class="d-flex one-booking-col">
                 <div class="one-booking-col-grey-bar" style="background-color: lightgray; width: 1%">
                 </div>
                 <div class="one-booking-a-col" style="margin-right: 10px; padding: 5px 0 10px 10px">
                   <p> <%= booking.date %></p>
+                  <p>Time: <%= booking.time.to_s(:time)  %></p>
+                  <p> Status: <%= booking.accepted? ? "Confirmed" : "Pending" %>
                 </div>
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
-                  <p>Time: <%= booking.time %></p>
+                  
                   <p>Pet name: <%= booking.pet.name%></p>
                   <p>Clinic name: <%= booking.vet.user.name%></p>
                   <p>Clinic address: <%= booking.vet.user.location %></p>
                   <p>Veterinary booked: <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
+
                 </div>
 
 
@@ -88,10 +91,8 @@
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
                   </div>
                 </div> </div>
-            <% elsif !booking.accepted %>
-              <div style="background-color: rgba(254,126,104,0.2); padding-top: 5px">
-                <p style="color: grey; padding-left: 10px;">Your booking with <%= booking.vet.user.name%> is pending confirmation.</p>
-              </div>
+            
+              
             <% end %>
 
 
