added if statement around the pic on pet show. it needs to be styled

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -35,7 +35,14 @@
          </div>
 
         <div class="col info d-flex justify-content-end align-items-center">
-           <%= cl_image_tag(@pet.photo.key,:class => "petavatar-round", crop: :fill) %>
+        
+        <% if @pet.photo.attached? %>
+          <%= cl_image_tag(@pet.photo.key,:class => "petavatar-round", crop: :fill) %>
+          <% else %>
+          <%= image_tag(('chihuahua.jpg'), :class =>"avatar-square") %>
+        <% end %>
+        
+           
        </div>
 
       </div>
